2009-08-12  Felix Riemann  <friemann@gnome.org>

	* plugins/exif-display/eog-exif-display-plugin.c (impl_activate),
	(impl_create_config_dialog):
	Set translation domain on GtkBuilder instances or else UI strings are
	only partially translated because the strings are searched for in
	eog's translations.

2009-08-12  Felix Riemann  <friemann@gnome.org>

	* plugins/exif-display/eog-exif-display-plugin.c:
	* plugins/exif-display/exif-display.ui:
	Add description tag to the list of displayed exif tags and improve
	widget alignment (Jonathan Michalon).

2009-08-11  Felix Riemann  <friemann@gnome.org>

	* configure.ac:
	* plugins/*/Makefile.am:
	Add support for Automake 1.11's silent build rules.

2009-07-18  Felix Riemann  <friemann@gnome.org>

	* configure.ac: Raise gtk+ dependency to at least 2.12.

2009-07-18  Felix Riemann  <friemann@gnome.org>

	* plugins/champlain/eog-champlain-plugin.c (impl_activate):
	Make the sidebar's page title translatable.

2009-06-27  Felix Riemann  <friemann@gnome.org>

	* plugins/exif-display/eog-exif-display-plugin.c:
	* plugins/slideshowshuffle/slideshowshuffle.py:
	Strip trailing whitespaces.

2009-06-16  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/exif-display/exif-display-config.ui:
	Mark empty labels untranslatable.

2009-06-16  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/exif-display/Makefile.am:
	* plugins/exif-display/eog-exif-display-plugin.c:
	Don't install UI files into the plugins folder directly.

2009-06-12  Felix Riemann  <friemann@svn.gnome.org>

	* configure.ac:
	* plugins/exif-display/eog-exif-display-plugin.c
	(_eog_util_make_valid_utf8), (eog_exif_set_label):
	Duplicate eog_util_make_valid_utf8 into the plugin as it is not
	exported anymore by the current eog version.

2009-06-12  Felix Riemann  <friemann@svn.gnome.org>

	* plugins/exif-display/Makefile.am:
	* plugins/exif-display/eog-exif-display-plugin.c:
	* plugins/exif-display/eog-exif-display-plugin.h: